cartocss with admin-0 capitals in red

--- a/index.html
+++ b/index.html
@@ -130,7 +130,19 @@
                         "options": {
                           "sql": "select * from ne_10m_populated_places_simple",
                           "layer_name": "Populated places",
-                          "cartocss": "/** simple visualization */\n\n#places{\n marker-fill-opacity: 0.9;\n  marker-line-color: #FFF;\n  marker-line-width: 0.6;\n  marker-line-opacity: 1;\n  marker-placement: point;\n  marker-type: ellipse;\n  marker-width: 8;\n  marker-fill: green;\n  marker-allow-overlap: true;\n}",
+                          "cartocss": ['#places {',
+                            'marker-fill-opacity: 0.9;',
+                            'marker-line-color: #FFF;',
+                            'marker-line-width: 0.6;',
+                            'marker-line-opacity: 1;',
+                            'marker-placement: point;',
+                            'marker-type: ellipse;',
+                            'marker-width: 8;',
+                            'marker-fill: green;',
+                            'marker-allow-overlap: true;',
+                            '[featurecla="Admin-0 capital"] { marker-fill: red; }',
+                            '[zoom>6] { marker-width: 16; }',
+                          '}'].join(''),
                           "cartocss_version": "2.1.1",
                           "interactivity": "cartodb_id,adm0name,name,pop_max",
                           "table_name": "\"\".",
