Start using sum aggregation by country

--- a/index.html
+++ b/index.html
@@ -155,9 +155,10 @@
                             },
                             'category_widget_adm0name': {
                               "type": "aggregation",
-                                "title": "Country",
+                                "title": "Population by country",
                                 "column": "adm0name",
-                                "aggregation": "count",
+                                "aggregation": "sum",
+                                "aggregationColumn": "pop_max",
                                 "sync": true
                             },
                             'category_widget_featurecla': {
