Revert previous sum aggregation

--- a/index.html
+++ b/index.html
@@ -155,10 +155,9 @@
                             },
                             'category_widget_adm0name': {
                               "type": "aggregation",
-                                "title": "Population by country",
+                                "title": "Country",
                                 "column": "adm0name",
-                                "aggregation": "sum",
-                                "aggregationColumn": "pop_max",
+                                "aggregation": "count",
                                 "sync": true
                             },
                             'category_widget_featurecla': {
