--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             'marker-width: 8;',
                             'marker-fill: green;',
                             'marker-allow-overlap: true;',
-                            '[featurecla="Admin-0 capital"] { marker-fill: red; }',
+                            '[featurecla="Admin-0 capital"] { marker-fill: #f03b20; }',
                             '[zoom>6] { marker-width: 16; }',
                           '}'].join(''),
                           "cartocss_version": "2.1.1",
