--- a/airbnb_madrid_oct_2015_listings.html
+++ b/airbnb_madrid_oct_2015_listings.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>CartoDB.js: Airbnb Oct. 2015 Madrid listings</title>
     <meta name=viewport content="width=device-width initial-scale=1">
-    <link rel="stylesheet" href="/dist/themes/css/cartodb.css" />
-    <script src="/dist/cartodb.uncompressed.js"></script>
+    <link rel="stylesheet" href="./dist/themes/css/cartodb.css" />
+    <script src="./dist/cartodb.uncompressed.js"></script>
     <style type="text/css">
       html, body {
         position:relative;
