Added prefixes to the formulas

--- a/airbnb_madrid_oct_2015_listings.html
+++ b/airbnb_madrid_oct_2015_listings.html
@@ -285,19 +285,22 @@
                                                   "type": "formula",
                                                   "title": "Avg price",
                                                   "column": "price",
-                                                  "operation": "avg"
+                                                  "operation": "avg",
+                                                  "prefix": "$"
                                               },
                                               'formula_widget_min': {
                                                   "type": "formula",
                                                   "title": "Min price",
                                                   "column": "price",
-                                                  "operation": "min"
+                                                  "operation": "min",
+                                                  "prefix": "$"
                                               },
                                               'formula_widget_max': {
                                                   "type": "formula",
                                                   "title": "Max price",
                                                   "column": "price",
-                                                  "operation": "max"
+                                                  "operation": "max",
+                                                  "prefix": "$"
                                               }
                                           }
                                       }
