--- a/airbnb_madrid_oct_2015_listings.html
+++ b/airbnb_madrid_oct_2015_listings.html
@@ -243,7 +243,7 @@
                                           "widgets": {
                                               "histogram_widget_price": {
                                                   "type": "histogram",
-                                                  "title": "Price",
+                                                  "title": "Price per night",
                                                   "column": "price",
                                                   "bins": 10
                                               },
@@ -269,35 +269,35 @@
                                               },
                                               'category_widget_host_name': {
                                                   "type": "aggregation",
-                                                  "title": "Host",
+                                                  "title": "Host Name",
                                                   "column": "host_name",
                                                   "aggregation": "count",
                                                   "sync": true
                                               },
                                               'category_widget_bedrooms': {
                                                   "type": "aggregation",
-                                                  "title": "Bedrooms",
+                                                  "title": "Number of Bedrooms",
                                                   "column": "bedrooms",
                                                   "aggregation": "count",
                                                   "sync": true
                                               },
                                               'formula_widget_price_avg': {
                                                   "type": "formula",
-                                                  "title": "Avg price",
+                                                  "title": "Average price",
                                                   "column": "price",
                                                   "operation": "avg",
                                                   "prefix": "$"
                                               },
                                               'formula_widget_min': {
                                                   "type": "formula",
-                                                  "title": "Min price",
+                                                  "title": "Minimum price",
                                                   "column": "price",
                                                   "operation": "min",
                                                   "prefix": "$"
                                               },
                                               'formula_widget_max': {
                                                   "type": "formula",
-                                                  "title": "Max price",
+                                                  "title": "Maximum price",
                                                   "column": "price",
                                                   "operation": "max",
                                                   "prefix": "$"
