--- a/airbnb_and_closest_metro.html
+++ b/airbnb_and_closest_metro.html
@@ -6,6 +6,7 @@
     <meta name=viewport content="width=device-width initial-scale=1">
     <link rel="stylesheet" href="./dist/themes/css/cartodb.css" />
     <script src="./dist/cartodb.uncompressed.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <style type="text/css">
         html, body {
             position:relative;
@@ -20,13 +21,63 @@
 <div class="Dashboard-canvas js-dashboard">
     <div class="Dashboard-mapWrapper js-dashboard-map-wrapper">
         <div class="Dashboard-info">
-            <div class="Dashboard-info-header">
+          <div class="Dashboard-info-header">
+            <div class="Dashboard-info-logo">
+            </div>
+            <div class="Dashboard-info-actions">
+              <a href="#" class="Dashboard-info-actions-link"></a>
             </div>
             <div class="Dashboard-info-texts">
-                <p class="Dashboard-info-update">UPDATED 14 HOURS AGO</p>
-                <h1 class="Dashboard-info-title">Airbnb Oct. 2015 Madrid listings</h1>
-                <h2 class="Dashboard-info-description">...</h2>
+              <p class="Dashboard-info-update">UPDATED 14 HOURS AGO</p>
+              <h1 class="Dashboard-info-title">Airbnb Oct. 2015 Madrid listings and closest metro lines</h1>
+              <h2 class="Dashboard-info-description">...</h2>
             </div>
+          </div>
+
+          <div class="Dashboard-info-footer">
+            <!--
+            <div class="Dashboard-info-snapshots">
+              <ul class="Dashboard-info-snapshots-list">
+                <li class="Dashboard-info-snapshots-list-item">
+                  <h3 class="Dashboard-info-snapshots-list-title">NAMED SNAPSHOT</h3>
+                  <p class="Dashboard-info-snapshots-list-date">08/10 · 17:35</p>
+                </li>
+                <li class="Dashboard-info-snapshots-list-item">
+                  <h3 class="Dashboard-info-snapshots-list-title">NAMED SNAPSHOT</h3>
+                  <p class="Dashboard-info-snapshots-list-date">08/10 · 17:35</p>
+                </li>
+                <li class="Dashboard-info-snapshots-list-item">
+                  <h3 class="Dashboard-info-snapshots-list-title">NAMED SNAPSHOT</h3>
+                  <p class="Dashboard-info-snapshots-list-date">08/10 · 17:35</p>
+                </li>
+                <li class="Dashboard-info-snapshots-list-item">
+                  <h3 class="Dashboard-info-snapshots-list-title">NAMED SNAPSHOT</h3>
+                  <p class="Dashboard-info-snapshots-list-date">08/10 · 17:35</p>
+                </li>
+              </ul>
+            </div>-->
+            <ul>
+              <li class="Dashboard-info-footer-item">
+                <div class="Dashboard-info-media">
+                  <img src="/themes/img/icon-save.svg" alt="Save" />
+                </div>
+                <p class="Dashboard-info-footer-txt">Save snapshot</p>
+              </li>
+              <li class="Dashboard-info-footer-item">
+                <div class="Dashboard-info-media">
+                  <img src="/themes/img/icon-share.svg" alt="share" />
+                </div>
+                <p class="Dashboard-info-footer-txt">Share view</p>
+              </li>
+              <li class="Dashboard-info-footer-item">
+                <div class="Dashboard-info-media">
+                  <img src="/themes/img/avatar.png" alt="avatar" class="inline-block"/>
+                </div>
+                <p class="Dashboard-info-footer-txt">Danielle Brewer</p>
+              </li>
+            </ul>
+          </div>
+
         </div>
         <div class="Map-canvas Map-canvas--margin">
             <div class="Map" id="map"></div>
@@ -555,6 +606,10 @@ window.onload = function() {
         window.vis = vis;
         window.map = vis.getNativeMap();
         window.layers = layers.models[1].layers;
+
+        $(".Dashboard-info-actions-link").click(function() {
+          $('.Dashboard-info').toggleClass('is-active');
+        });
     })
     .error(function(err) {
         console.log(err);
