--- a/airbnb_and_closest_metro.html
+++ b/airbnb_and_closest_metro.html
@@ -59,19 +59,19 @@
             <ul>
               <li class="Dashboard-info-footer-item">
                 <div class="Dashboard-info-media">
-                  <img src="/themes/img/icon-save.svg" alt="Save" />
+                  <img src="./dist/themes/img/icon-save.svg" alt="Save" />
                 </div>
                 <p class="Dashboard-info-footer-txt">Save snapshot</p>
               </li>
               <li class="Dashboard-info-footer-item">
                 <div class="Dashboard-info-media">
-                  <img src="/themes/img/icon-share.svg" alt="share" />
+                  <img src="./dist/themes/img/icon-share.svg" alt="share" />
                 </div>
                 <p class="Dashboard-info-footer-txt">Share view</p>
               </li>
               <li class="Dashboard-info-footer-item">
                 <div class="Dashboard-info-media">
-                  <img src="/themes/img/avatar.png" alt="avatar" class="inline-block"/>
+                  <img src="./dist/themes/img/avatar.png" alt="avatar" class="inline-block"/>
                 </div>
                 <p class="Dashboard-info-footer-txt">Danielle Brewer</p>
               </li>
