--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <body>
     <div class="Dashboard-canvas js-dashboard">
       <div class="Dashboard-mapWrapper js-dashboard-map-wrapper">
+        <div class="Dashboard-info">
           <div class="Dashboard-info-header">
-            <div class="Dashboard-info-logo">
-            </div>
+            <div class="Dashboard-info-logo"></div>
             <div class="Dashboard-info-actions">
               <a href="#" class="Dashboard-info-actions-link"></a>
             </div>
@@ -75,13 +75,12 @@
               </li>
             </ul>
           </div>
-
-          <div class="Map-canvas Map-canvas--margin">
-              <div class="Map" id="map"></div>
-          </div>
+        </div>
+        <div class="Map-canvas Map-canvas--margin">
+          <div class="Map" id="map"></div>
+        </div>
       </div>
     </div>
-
 
     <script>
       window.onload = function() {
