Updated examples with last widgets code

--- a/airbnb_and_closest_metro.html
+++ b/airbnb_and_closest_metro.html
@@ -30,9 +30,9 @@ window.onload = function() {
     var VIZJSON = {
         "id": "84ec6844-4b4b-11e5-9c1d-080027880ca6",
         "version": "0.1.0",
-        "title": "my map",
+        "title": "Airbnb Madrid and closest metro lines",
         "likes": 0,
-        "description": "The NBA Territory Analysis Tool will allow individual teams to analyze their current and potential marketing territories. Users can see visual reports and develop analyses on the fly.",
+        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate consequat vehicula. Sed eget leo a ex tempus cursus. Etiam consectetur cursus tortor, id dapibus elit condimentum id. Nulla sed gravida lorem, at ornare lectus. Aliquam quis erat porttitor, varius lectus eget, rhoncus mi...",
         "scrollwheel": false,
         "legends": true,
         "url": null,
