--- a/airbnb_madrid_oct_2015_listings.html
+++ b/airbnb_madrid_oct_2015_listings.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>CartoDB.js: Airbnb Oct. 2015 Madrid listings</title>
     <meta name=viewport content="width=device-width initial-scale=1">
-    <link rel="stylesheet" href="./dist/themes/css/cartodb.css" />
-    <script src="./dist/cartodb.uncompressed.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="./themes/css/cartodb.css" />
+    <script src="./cartodb.uncompressed.js"></script>
     <style type="text/css">
       html, body {
         position:relative;
@@ -20,64 +19,6 @@
 
     <div class="Dashboard-canvas js-dashboard">
       <div class="Dashboard-mapWrapper js-dashboard-map-wrapper">
-        <div class="Dashboard-info">
-          <div class="Dashboard-info-header">
-            <div class="Dashboard-info-logo">
-            </div>
-            <div class="Dashboard-info-actions">
-              <a href="#" class="Dashboard-info-actions-link"></a>
-            </div>
-            <div class="Dashboard-info-texts">
-              <p class="Dashboard-info-update">UPDATED 14 HOURS AGO</p>
-              <h1 class="Dashboard-info-title">Airbnb Oct. 2015 Madrid listings</h1>
-              <h2 class="Dashboard-info-description">...</h2>
-            </div>
-          </div>
-
-          <div class="Dashboard-info-footer">
-            <!--
-            <div class="Dashboard-info-snapshots">
-              <ul class="Dashboard-info-snapshots-list">
-                <li class="Dashboard-info-snapshots-list-item">
-                  <h3 class="Dashboard-info-snapshots-list-title">NAMED SNAPSHOT</h3>
-                  <p class="Dashboard-info-snapshots-list-date">08/10 · 17:35</p>
-                </li>
-                <li class="Dashboard-info-snapshots-list-item">
-                  <h3 class="Dashboard-info-snapshots-list-title">NAMED SNAPSHOT</h3>
-                  <p class="Dashboard-info-snapshots-list-date">08/10 · 17:35</p>
-                </li>
-                <li class="Dashboard-info-snapshots-list-item">
-                  <h3 class="Dashboard-info-snapshots-list-title">NAMED SNAPSHOT</h3>
-                  <p class="Dashboard-info-snapshots-list-date">08/10 · 17:35</p>
-                </li>
-                <li class="Dashboard-info-snapshots-list-item">
-                  <h3 class="Dashboard-info-snapshots-list-title">NAMED SNAPSHOT</h3>
-                  <p class="Dashboard-info-snapshots-list-date">08/10 · 17:35</p>
-                </li>
-              </ul>
-            </div>-->
-            <ul>
-              <li class="Dashboard-info-footer-item">
-                <div class="Dashboard-info-media">
-                  <img src="./dist/themes/img/icon-save.svg" alt="Save" />
-                </div>
-                <p class="Dashboard-info-footer-txt">Save snapshot</p>
-              </li>
-              <li class="Dashboard-info-footer-item">
-                <div class="Dashboard-info-media">
-                  <img src="./dist/themes/img/icon-share.svg" alt="share" />
-                </div>
-                <p class="Dashboard-info-footer-txt">Share view</p>
-              </li>
-              <li class="Dashboard-info-footer-item">
-                <div class="Dashboard-info-media">
-                  <img src="./dist/themes/img/avatar.png" alt="avatar" class="inline-block"/>
-                </div>
-                <p class="Dashboard-info-footer-txt">Danielle Brewer</p>
-              </li>
-            </ul>
-          </div>
-        </div>
         <div class="Map-canvas Map-canvas--margin">
           <div class="Map" id="map"></div>
         </div>
@@ -89,13 +30,17 @@
           var VIZJSON = {
               "id": "84ec6844-4b4b-11e5-9c1d-080027880ca6",
               "version": "0.1.0",
-              "title": "my map",
+              "title": "Airbnb Madrid",
               "likes": 0,
-              "description": null,
+              "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate consequat vehicula. Sed eget leo a ex tempus cursus. Etiam consectetur cursus tortor, id dapibus elit condimentum id. Nulla sed gravida lorem, at ornare lectus. Aliquam quis erat porttitor, varius lectus eget, rhoncus mi...",
               "scrollwheel": false,
               "legends": true,
               "url": null,
               "map_provider": "leaflet",
+              "user": {
+                "fullname": "Emilio García",
+                "avatar_url": "https://s3.amazonaws.com/com.cartodb.users-assets.production/production/piensaenpixel/assets/20150507074635Captura%20de%20pantalla%202015-05-07%20a%20la%28s%29%2009.46.28.png"
+              },
               "bounds": [
                   [
                       40.63,
@@ -434,10 +379,6 @@
             window.vis = vis;
             window.map = vis.getNativeMap();
             window.layers = layers.models[1].layers;
-
-            $(".Dashboard-info-actions-link").click(function() {
-              $('.Dashboard-info').toggleClass('is-active');
-            });
           })
           .error(function(err) {
             console.log(err);
