Update time-series example
Uses temporary bundle since not merged to cartodb.js widgets branch yet

--- a/earthquakes_last_month.html
+++ b/earthquakes_last_month.html
@@ -5,7 +5,7 @@
     <title>CartoDB.js – EarthQuakes last month</title>
     <meta name=viewport content="width=device-width initial-scale=1">
     <link rel="stylesheet" href="./themes/css/cartodb.css" />
-    <script src="./cartodb.uncompressed.js"></script>
+    <script src="./cartodb.uncompressed-time-series-tmp.js"></script>
     <script src="./cartodb.mod.torque.uncompressed.js"></script>
     <style type="text/css">
       html, body {
@@ -18,14 +18,7 @@
 </head>
 <body>
 
-  <div class="Dashboard-canvas js-dashboard">
-    <div class="Dashboard-mapWrapper Dashboard-mapWrapper--margin">
-      <div class="Map-canvas">
-        <div class="Map" id="map"></div>
-      </div>
-      <div class="Dashboard-belowMap js-dashboard-belowMap"></div>
-    </div>
-  </div>
+  <div class="Dashboard-canvas" id="dashboard"></div>
 
 <script>
 window.onload = function() {
@@ -205,7 +198,7 @@ window.onload = function() {
         }
     };
 
-    cartodb.createVis('map', VIZJSON, {
+    cartodb.createVis('dashboard', VIZJSON, {
         no_cdn: false
     })
     .done(function(vis, layers) {
