Fix time-series widget start/end values

--- a/earthquakes_last_month.html
+++ b/earthquakes_last_month.html
@@ -120,8 +120,8 @@ window.onload = function() {
                   "column": "moment",
                   // TODO initial request is hardcoded until the tiler can resolve this itself
                   "bins": 256,
-                  start: 1361776558,
-                  end: 1362012931
+                  "start": 1446292117,
+                  "end": 1448882871
                 },
                 "category_widget_uuid": {
                   "type": "aggregation",
