Fixing font rendering over safari + fixed example with new dashboard thing

--- a/airbnb_and_closest_metro.html
+++ b/airbnb_and_closest_metro.html
@@ -543,7 +543,7 @@ window.onload = function() {
         }
     };
 
-    cartodb.createVis('map', VIZJSON, {
+    cartodb.createVis('dashboard', VIZJSON, {
         no_cdn: false
     })
     .done(function(vis, layers) {
