--- a/airbnb_madrid_oct_2015_listings.html
+++ b/airbnb_madrid_oct_2015_listings.html
@@ -372,8 +372,8 @@
               }
           };
 
-          cartodb.createVis('map', VIZJSON, {
-            no_cdn: false
+          cartodb.createVis('dashboard', VIZJSON, {
+              no_cdn: false
           })
           .done(function(vis, layers) {
             window.vis = vis;
