--- a/index.html
+++ b/index.html
@@ -16,13 +16,7 @@
     </style>
   </head>
   <body>
-    <div class="Dashboard-canvas js-dashboard">
-      <div class="Dashboard-mapWrapper js-dashboard-map-wrapper">
-        <div class="Map-canvas Map-canvas--margin">
-          <div class="Map" id="map"></div>
-        </div>
-      </div>
-    </div>
+    <div class="Dashboard-canvas" id="dashboard"></div>
 
     <script>
       window.onload = function() {
@@ -301,8 +295,8 @@
             }
           }
 
-          cartodb.createVis('map', vizJSON1, {
-            no_cdn: true,
+          cartodb.createVis('dashboard', vizJSON1, {
+              no_cdn: false
           })
           .done(function(vis, layers) {
 
