Fixing examples with new Dashboard thing

--- a/airbnb_and_closest_metro.html
+++ b/airbnb_and_closest_metro.html
@@ -17,13 +17,7 @@
 </head>
 <body>
 
-<div class="Dashboard-canvas js-dashboard">
-    <div class="Dashboard-mapWrapper js-dashboard-map-wrapper">
-      <div class="Map-canvas Map-canvas--margin">
-        <div class="Map" id="map"></div>
-      </div>
-    </div>
-</div>
+<div class="Dashboard-canvas" id="dashboard"></div>
 
 <script>
 window.onload = function() {
