Update examples to latest widgets
https://github.com/CartoDB/cartodb.js/commit/1039b7e9c5761f244cfee15b381
78def12641ba8

--- a/earthquakes_last_month.html
+++ b/earthquakes_last_month.html
@@ -5,7 +5,7 @@
     <title>CartoDB.js – EarthQuakes last month</title>
     <meta name=viewport content="width=device-width initial-scale=1">
     <link rel="stylesheet" href="./themes/css/cartodb.css" />
-    <script src="./cartodb.uncompressed-time-series-tmp.js"></script>
+    <script src="./cartodb.uncompressed.js"></script>
     <script src="./cartodb.mod.torque.uncompressed.js"></script>
     <style type="text/css">
       html, body {
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-  <div class="Dashboard-canvas" id="dashboard"></div>
+  <div id="dashboard"></div>
 
 <script>
 window.onload = function() {
