--- a/earthquakes_last_month.html
+++ b/earthquakes_last_month.html
@@ -5,10 +5,8 @@
   <meta charset="UTF-8">
   <title>Deep-Insights.js – EarthQuakes last month</title>
   <meta name=viewport content="width=device-width initial-scale=1">
-  <link href="./dist/themes/css/cartodb.css" rel="stylesheet" />
+  <link href="http://cartodb.com/favicon.ico" rel="shortcut icon" />
   <link href="./dist/themes/css/deep-insights.css" rel="stylesheet" />
-  <script src="./dist/cartodb.uncompressed.js"></script>
-  <script src="./dist/cartodb.mod.torque.uncompressed.js"></script>
   <script src="./dist/deep-insights.js"></script>
   <style type="text/css">
     html,
@@ -168,16 +166,11 @@
               "x": 20,
               "y": 20
             },
-            "template": "<a href=\"#zoom_in\" class=\"zoom_in\">+</a> <a href=\"#zoom_out\" class=\"zoom_out\">-</a>"
-          }, {
-            "type": "loader",
-            "order": 8,
-            "options": {
-              "display": true,
-              "x": 20,
-              "y": 150
-            },
-            "template": "<div class=\"loader\" original-title=\"\"></div>"
+            "template": '<div class="CDB-Overlay">' +
+                '<button class="CDB-Zoom-action CDB-Zoom-action--out js-zoomOut"></button>' +
+                '<button class="CDB-Zoom-action CDB-Zoom-action--in js-zoomIn"></button>' +
+              '</div>' +
+              '<div class="CDB-Zoom-info js-zoomInfo">-</div>'
           }, {
             "type": "logo",
             "order": 9,
