Fixed airbnb examples

--- a/airbnb_and_closest_metro.html
+++ b/airbnb_and_closest_metro.html
@@ -142,6 +142,8 @@
           }, {
             "type": "layergroup",
             "options": {
+              "user_name": "rochoa-st-ded02",
+              "maps_api_template": "https://{user}.cartodb-staging.com:443",
               "layer_definition": {
                 "stat_tag": "84ec6844-4b4b-11e5-9c1d-080020ca7886",
                 "version": "1.0.1",
@@ -341,6 +343,8 @@
                   },
                   "order": 1,
                   "visible": true,
+                  "user_name": "rochoa-st-ded02",
+                  "maps_api_template": "https://{user}.cartodb-staging.com:443",
                   "options": {
                     "sql": [
                       "SELECT *, GREATEST(4, POWER(LOG(price), 3)) price_width",
