--- a/airbnb_madrid_oct_2015_listings.html
+++ b/airbnb_madrid_oct_2015_listings.html
@@ -164,6 +164,8 @@
           }, {
             "type": "layergroup",
             "options": {
+              "user_name": "rochoa-st-ded02",
+              "maps_api_template": "https://{user}.cartodb-staging.com:443",
               "layer_definition": {
                 "stat_tag": "84ec6844-4b4b-11e5-9c1d-080020ca7886",
                 "version": "1.0.1",
