--- a/airbnb_madrid_oct_2015_listings.html
+++ b/airbnb_madrid_oct_2015_listings.html
@@ -265,7 +265,7 @@
                       "position": 14
                     }],
                     "template_name": "tooltip_light",
-                    "template": "<ul class=\"CDB-Tooltip-List\">\n {{#fields}}\n <li class=\"CDB-Tooltip-ListItem\">\n {{#title}}\n <h4 class=\"CDB-Tooltip-ListTitle\">\n{{title}}</h4>\n {{/title}}\n <p class=\"CDB-Tooltip-ListText\">\n{{{ value }}}</p>\n </li>\n {{/fields}}\n  </ul>",
+                    "template": "<div class='CDB-Tooltip CDB-Tooltip--isLight'><ul class=\"CDB-Tooltip-list\">\n {{#fields}}\n <li class=\"CDB-Tooltip-listItem\">\n {{#title}}\n <h4 class=\"CDB-Tooltip-listTitle\">\n{{title}}</h4>\n {{/title}}\n <p class=\"CDB-Tooltip-listText\">\n{{{ value }}}</p>\n </li>\n {{/fields}}\n  </ul></div>",
                     "alternative_names": {},
                     "maxHeight": 180
                   },
@@ -307,15 +307,6 @@
             }
           }],
           "overlays": [{
-            "type": "share",
-            "order": 2,
-            "options": {
-              "display": true,
-              "x": 20,
-              "y": 20
-            },
-            "template": ""
-          }, {
             "type": "search",
             "order": 3,
             "options": {
