Removed share overlay from index example

--- a/index.html
+++ b/index.html
@@ -248,18 +248,7 @@
               "type": "tiled"
             }
           ],
-          "overlays": [
-            {
-              "type": "share",
-              "order": 2,
-              "options": {
-                "display": true,
-                "x": 20,
-                "y": 20
-              },
-              "template": ""
-            },
-            {
+          "overlays": [{
               "type": "search",
               "order": 3,
               "options": {
