--- a/airbnb_madrid_oct_2015_listings.html
+++ b/airbnb_madrid_oct_2015_listings.html
@@ -328,16 +328,17 @@
                 '<button class="CDB-Zoom-action CDB-Zoom-action--in js-zoomIn"></button>' +
               '</div>' +
               '<div class="CDB-Zoom-info js-zoomInfo">-</div>'
-          }, {
-            "type": "logo",
-            "order": 9,
-            "options": {
-              "display": true,
-              "x": 10,
-              "y": 40
-            },
-            "template": ""
-          }],
+          },{
+              "type": "loader",
+              "order": 8,
+              "options": {
+                "display": true,
+                "x": 20,
+                "y": 150
+              },
+              "template": ""
+            }
+          ],
           "prev": null,
           "next": null,
           "transition_options": {
