Add # accomodates aggregation widget

--- a/airbnb_madrid_oct_2015_listings.html
+++ b/airbnb_madrid_oct_2015_listings.html
@@ -50,6 +50,14 @@
             "column": "price",
             "bins": 10
           },
+          "aggregation_widget_accommodates": {
+            "layerId": "4d82e8df-f21b-4225-b776-61b1bdffde6c",
+            "type": "aggregation",
+            "title": "Accommodates",
+            "column": "accommodates",
+            "aggregation": "count",
+            "sync": true
+          },
           'histogram_widget_review_scores_value': {
             "layerId": "4d82e8df-f21b-4225-b776-61b1bdffde6c",
             "type": "histogram",
