--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="deep-insights.js/dist/deep-insights.uncompressed.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <style type="text/css">
-    html,
+   html,
     body {
       position: relative;
       height: 100%;
@@ -20,12 +20,150 @@
     .cartodb-tooltip-content {
       color: #FFF;
     }
+    .CDB-Legends {
+      position: absolute;
+      background: #FFFFFF;
+      border: 1px solid #DDDDDD;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.16);
+      border-radius: 4px;
+      left: 108px;
+      top: 30px;
+      z-index: 10000;
+      padding: 24px;
+      width: 280px;
+      box-sizing: border-box;
+    }
+    .CDB-Legends-Title {
+      font: 12px/16px OpenSans-Semibold;
+      color: #2E3C43;
+      margin-bottom: 8px;
+    }
+    .CDB-Legend-Gradient {
+      height: 8px;
+      background-image: linear-gradient(-90deg, #67E1A7 9%, #4CC9A4 29%, #2E9993 49%, #2a8286 71%, #2A5563 90%);
+      border-radius: 10px;
+      position: relative;
+      clear: both;
+      margin-top: 4px;
+    }
+    .CDB-Legend-Gradient:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      border: 1px solid rgba(0,0,0,0.20);
+      border-radius: 10px;
+    }
+    .CDB-Legends-Text {
+      font: 10px/14px OpenSans-Semibold;
+      color: #2E3C43;
+    }
+    .CDB-Legends-Text span {
+      display: inline-block;
+      vertical-align: middle;
+    }
+    .is-left {
+      float: left;
+    }
+    .is-right {
+      float: right;
+    }
+    .CDB-Legends-Info {
+      margin-bottom: 24px;
+    }
+    .CDB-Legends-Info.no-margin {
+      margin-bottom: 0;
+    }
+    .CDB-Legends-Info {
+      padding-left: 25px;
+      position: relative;
+    }
+    .CDB-Legends-Info:before {
+      content:"";
+      width: 1px;
+      position: absolute;
+      top: 0;
+      bottom: 10px;
+      left: 10px;
+      background: #EDEDED;
+    }
+    .CDB-Legends-Info.is-choropleth:before {
+      bottom: auto;
+      height: 11px
+    }
+    .CDB-Legends-InfoItem {
+      padding: 5px 0;
+      position: relative;
+    }
+    .CDB-Legends-InfoItem:before{
+      content: "";
+      position: absolute;
+      width: 3px;
+      height: 3px;
+      border-radius: 50%;
+      background: #fff;
+      border: 1px solid #DDD;
+      top: 10px;
+      left: -17px;
+    }
+    .CDB-Legends-Choropleth {
+      width: auto;
+      overflow: hidden;
+      margin-bottom: 6px;
+    }
+    .CDB-Marker {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 4px;
+      position: relative;
+    }
+    .CDB-Marker:after {
+      content:"";
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      border-radius: 50%;
+      border: 1px solid rgba(0, 0, 0, .24);
+    }
   </style>
 </head>
 
 <body>
   <div class="Dashboard-canvas" id="dashboard"></div>
-
+<div class="CDB-Legends">
+    <h2 class="CDB-Legends-Title">Fit to selection</h2>
+    <ul class="CDB-Legends-Info is-choropleth">
+      <li class="CDB-Legends-InfoItem">
+        <div class="CDB-Legends-Choropleth">
+          <p class="CDB-Legends-Text is-left">WORSE</p>
+          <p class="CDB-Legends-Text is-right">BETTER</p>
+        </div>
+        <div class="CDB-Legend-Gradient"></div>
+      </li>
+    </ul>
+    <h2 class="CDB-Legends-Title">Points</h2>
+    <ul class="CDB-Legends-Info no-margin">
+      <li class="CDB-Legends-InfoItem">
+        <p class="CDB-Legends-Text">
+          <span class="CDB-Marker" style="background: #FFCD00;"></span>
+          <span>RETAIL LOCATION</span>
+        </p>
+      </li>
+      <li class="CDB-Legends-InfoItem">
+        <p class="CDB-Legends-Text">
+          <span class="CDB-Marker" style="background: #A635D8;"></span>
+          <span>TOWER SITE</span>
+        </p>
+      </li>
+    </ul>
+  </div>
   <script>
 var widgetInfo = {},
 categoryFilters = [];
@@ -55,7 +193,7 @@ window.onload = function() {
           {
             "type":"category",
             "layerIndex": 1,
-            "title": "Current customers",
+            "title": "Current Customers",
             "options": {
               "type": "aggregation",
               "column": "williamsburg",
@@ -110,15 +248,7 @@ window.onload = function() {
               "aggregation": "count",
               "aggregationColumn": "primary_roadway_distance_cats"
             }
-          },{
-            "type":"histogram",
-            "layerIndex": 1,
-            "title":"Commercial Activity Rank",
-            "options": {
-              "column":"quad_cat_axh",
-              "bins":10          
-            }
-         }
+          }
        ]  
       }
 
