--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       border-radius: 4px;
       left: 108px;
       top: 30px;
-      z-index: 10000;
+      z-index: 1;
       padding: 24px;
       width: 280px;
       box-sizing: border-box;
@@ -53,9 +53,17 @@
       right: 0;
       bottom: 0;
       left: 0;
-      border: 1px solid rgba(0,0,0,0.20);
       border-radius: 10px;
     }
+
+    .tower {
+      border: 2px solid #FFCD00;
+    }
+
+    .retail {
+      border: 2px solid #A53ED5;
+    }
+
     .CDB-Legends-Text {
       font: 10px/14px OpenSans-Semibold;
       color: #2E3C43;
@@ -114,8 +122,8 @@
       margin-bottom: 6px;
     }
     .CDB-Marker {
-      width: 8px;
-      height: 8px;
+      width: 4px;
+      height: 4px;
       border-radius: 50%;
       display: inline-block;
       vertical-align: middle;
@@ -130,7 +138,7 @@
       bottom: 0;
       left: 0;
       border-radius: 50%;
-      border: 1px solid rgba(0, 0, 0, .24);
+
     }
   </style>
 </head>
@@ -152,18 +160,45 @@
     <ul class="CDB-Legends-Info no-margin">
       <li class="CDB-Legends-InfoItem">
         <p class="CDB-Legends-Text">
-          <span class="CDB-Marker" style="background: #FFCD00;"></span>
+          <span class="CDB-Marker retail" style="background: #FFF;"></span>
           <span>RETAIL LOCATION</span>
         </p>
       </li>
       <li class="CDB-Legends-InfoItem">
         <p class="CDB-Legends-Text">
-          <span class="CDB-Marker" style="background: #A635D8;"></span>
+          <span class="CDB-Marker tower" style="background: #FFF;"></span>
           <span>TOWER SITE</span>
         </p>
       </li>
     </ul>
   </div>
+  <script type='text' id="tooltipTemplate">
+  <div class='CDB-Tooltip CDB-Tooltip--isLight'>
+    <ul class="CDB-Tooltip-list">
+        <li style="list-style: none"></li>
+        
+        <li class="CDB-Tooltip-listItem">
+            <h4 class="CDB-Tooltip-listTitle">Median Age</h4>
+            <p class="CDB-Tooltip-listText">{{median_age}}</p>
+        </li>
+        <li class="CDB-Tooltip-listItem">
+            <h4 class="CDB-Tooltip-listTitle">Median Household
+            Income</h4>
+            <p class="CDB-Tooltip-listText">
+            ${{median_household_income}}</p>
+        </li>
+        <li class="CDB-Tooltip-listItem;">
+            <h4 class="CDB-Tooltip-listTitle">Home Ownership</h4>
+            <p class="CDB-Tooltip-listText">{{owner_occupied_housing_units_per_pop}}</p>
+        </li>
+        <li class="CDB-Tooltip-listItem">
+            <h4 class="CDB-Tooltip-listTitle">Disposable Income Percentile</h4>
+            <p class="CDB-Tooltip-listText">{{percent_household_income_spent_on_rent}}</p>
+        </li>
+        <li style="list-style: none"></li>
+    </ul>
+</div>
+  </script>
   <script>
 var widgetInfo = {},
 categoryFilters = [];
@@ -199,6 +234,16 @@ window.onload = function() {
               "column": "williamsburg",
               "aggregation": "count",
               "aggregationColumn": "williamsburg"
+            }
+          },{
+            "type":"category",
+            "layerIndex": 1,
+            "title": "Highway Proximity",
+            "options": {
+              "type": "aggregation",
+              "column": "primary_roadway_distance_cats",
+              "aggregation": "count",
+              "aggregationColumn": "primary_roadway_distance_cats"
             }
           },
 
@@ -238,17 +283,7 @@ window.onload = function() {
               "bins":10          
             }
          },
-         {
-            "type":"category",
-            "layerIndex": 1,
-            "title": "Highway Proximity",
-            "options": {
-              "type": "aggregation",
-              "column": "primary_roadway_distance_cats",
-              "aggregation": "count",
-              "aggregationColumn": "primary_roadway_distance_cats"
-            }
-          }
+         
        ]  
       }
 
@@ -268,7 +303,7 @@ window.onload = function() {
 
       console.log(vizJSON);
 
-      vizJSON.layers[1].options.layer_definition.layers[0].tooltip.template = "<div class='CDB-Tooltip CDB-Tooltip--isLight'><ul class=\"CDB-Tooltip-list\">\n \n <li class=\"CDB-Tooltip-listItem\"><h4 class=\"CDB-Tooltip-listTitle\">Score</h4><p class=\"CDB-Tooltip-listText\">{{score}}</p></li><li class=\"CDB-Tooltip-listItem\"><h4 class=\"CDB-Tooltip-listTitle\">Median Age</h4><p class=\"CDB-Tooltip-listText\">{{median_age}}</p></li><li class=\"CDB-Tooltip-listItem\"><h4 class=\"CDB-Tooltip-listTitle\">Median Household Income</h4><p class=\"CDB-Tooltip-listText\">${{median_household_income}}</p></li> \n </ul></div>"
+      vizJSON.layers[1].options.layer_definition.layers[0].tooltip.template = $('#tooltipTemplate').text();
 
       $.extend(vizJSON, diJSON);   
       cartodb.deepInsights.createDashboard('#dashboard', vizJSON, {  
