--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     }
     .CDB-Legend-Gradient {
       height: 8px;
-      background-image: linear-gradient(-90deg, #67E1A7 9%, #4CC9A4 29%, #2E9993 49%, #2a8286 71%, #2A5563 90%);
+      background-image: linear-gradient(-90deg, #8BF19B 9%, #65D79C 29%, #31A193 49%, #2A6C76 71%, #2a5362 90%);
       border-radius: 10px;
       position: relative;
       clear: both;
@@ -189,7 +189,7 @@
         </li>
         <li class="CDB-Tooltip-listItem;">
             <h4 class="CDB-Tooltip-listTitle">Home Ownership</h4>
-            <p class="CDB-Tooltip-listText">{{owner_occupied_housing_units_per_pop}}</p>
+            <p class="CDB-Tooltip-listText">{{ownership}}%</p>
         </li>
         <li class="CDB-Tooltip-listItem">
             <h4 class="CDB-Tooltip-listTitle">Disposable Income Percentile</h4>
