--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
       border-radius: 50%;
 
     }
+    .CDB-Tooltip-wrapper {
+      max-width: 210px;
+    }
   </style>
 </head>
 
@@ -187,7 +190,7 @@
             <p class="CDB-Tooltip-listText">
             ${{median_household_income}}</p>
         </li>
-        <li class="CDB-Tooltip-listItem;">
+        <li class="CDB-Tooltip-listItem">
             <h4 class="CDB-Tooltip-listTitle">Home Ownership</h4>
             <p class="CDB-Tooltip-listText">{{ownership}}%</p>
         </li>
