new layers and css

--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
     <ul class="CDB-Legends-Info no-margin">
       <li class="CDB-Legends-InfoItem">
         <p class="CDB-Legends-Text">
-          <span class="CDB-Marker retail" style="background: #FFF;"></span>
+          <span class="CDB-Marker retail" style="background: #FAAE00;border-color: #FAAE00;"></span>
           <span>RETAIL LOCATION</span>
         </p>
       </li>
       <li class="CDB-Legends-InfoItem">
         <p class="CDB-Legends-Text">
-          <span class="CDB-Marker tower" style="background: #FFF;"></span>
+          <span class="CDB-Marker tower" style="background: #FF4480;border-color: #FF4480;"></span>
           <span>TOWER SITE</span>
         </p>
       </li>
