--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Deep-Insights.js – Madrid: Airbnb, nightlife, and public transport</title>
+  <title>Telco Deep Insights</title>
   <meta name=viewport content="width=device-width initial-scale=1">
   <link href="http://cartodb.com/favicon.ico" rel="shortcut icon" />
   <link href="deep-insights.js/dist/themes/css/deep-insights.css" rel="stylesheet" />
