--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       left: 108px;
       top: 30px;
       z-index: 1;
-      padding: 24px;
+      padding: 15px;
+      opacity: 0.95;
       width: 280px;
       box-sizing: border-box;
     }
@@ -79,16 +80,16 @@
       float: right;
     }
     .CDB-Legends-Info {
-      margin-bottom: 24px;
+      margin-bottom: 0px;
     }
     .CDB-Legends-Info.no-margin {
       margin-bottom: 0;
     }
     .CDB-Legends-Info {
-      padding-left: 25px;
+      padding-left: 0px;
       position: relative;
     }
-    .CDB-Legends-Info:before {
+    /*.CDB-Legends-Info:before {
       content:"";
       width: 1px;
       position: absolute;
@@ -100,12 +101,12 @@
     .CDB-Legends-Info.is-choropleth:before {
       bottom: auto;
       height: 11px
-    }
+    }*/
     .CDB-Legends-InfoItem {
       padding: 5px 0;
       position: relative;
     }
-    .CDB-Legends-InfoItem:before{
+    /*.CDB-Legends-InfoItem:before{
       content: "";
       position: absolute;
       width: 3px;
@@ -115,7 +116,7 @@
       border: 1px solid #DDD;
       top: 10px;
       left: -17px;
-    }
+    }*/
     .CDB-Legends-Choropleth {
       width: auto;
       overflow: hidden;
@@ -149,17 +150,15 @@
 <body>
   <div class="Dashboard-canvas" id="dashboard"></div>
 <div class="CDB-Legends">
-    <h2 class="CDB-Legends-Title">Fit to selection</h2>
     <ul class="CDB-Legends-Info is-choropleth">
       <li class="CDB-Legends-InfoItem">
         <div class="CDB-Legends-Choropleth">
-          <p class="CDB-Legends-Text is-left">WORSE</p>
-          <p class="CDB-Legends-Text is-right">BETTER</p>
+          <p class="CDB-Legends-Text is-left">Bad Fit</p>
+          <p class="CDB-Legends-Text is-right">Good Fit</p>
         </div>
         <div class="CDB-Legend-Gradient"></div>
       </li>
     </ul>
-    <h2 class="CDB-Legends-Title">Points</h2>
     <ul class="CDB-Legends-Info no-margin">
       <li class="CDB-Legends-InfoItem">
         <p class="CDB-Legends-Text">
