--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     }
     .CDB-Legend-Gradient {
       height: 8px;
-      background-image: linear-gradient(-90deg, #8BF19B 9%, #65D79C 29%, #31A193 49%, #2A6C76 71%, #2a5362 90%);
+      background-image: linear-gradient(-90deg,#59CC9B 9%, #3FB79D 29%, #318C93 49%, #3D6177 71%, #3F4D64 90%);
       border-radius: 10px;
       position: relative;
       clear: both;
