Truncating rent spend

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </li>
         <li class="CDB-Tooltip-listItem">
             <h4 class="CDB-Tooltip-listTitle">Disposable Income Percentile</h4>
-            <p class="CDB-Tooltip-listText">{{percent_household_income_spent_on_rent}}</p>
+            <p class="CDB-Tooltip-listText">{{rent_spend}}</p>
         </li>
         <li style="list-style: none"></li>
     </ul>
