--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
     <ul class="CDB-Legends-Info is-choropleth">
       <li class="CDB-Legends-InfoItem">
         <div class="CDB-Legends-Choropleth">
-          <p class="CDB-Legends-Text is-left">Bad Fit</p>
-          <p class="CDB-Legends-Text is-right">Good Fit</p>
+          <p class="CDB-Legends-Text is-left">Low market potential</p>
+          <p class="CDB-Legends-Text is-right">High market potential</p>
         </div>
         <div class="CDB-Legend-Gradient"></div>
       </li>
