Another legend update

--- a/index.html
+++ b/index.html
@@ -150,11 +150,12 @@
 <body>
   <div class="Dashboard-canvas" id="dashboard"></div>
 <div class="CDB-Legends">
+    <h1 class='CDB-Legends-Title' style='text-align:center;margin-bottom:0px'>Market Potential</h1>
     <ul class="CDB-Legends-Info is-choropleth">
       <li class="CDB-Legends-InfoItem">
         <div class="CDB-Legends-Choropleth">
-          <p class="CDB-Legends-Text is-left">Low market potential</p>
-          <p class="CDB-Legends-Text is-right">High market potential</p>
+          <p class="CDB-Legends-Text is-left">Low</p>
+          <p class="CDB-Legends-Text is-right">High</p>
         </div>
         <div class="CDB-Legend-Gradient"></div>
       </li>
