--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 <body>
   <div class="Dashboard-canvas" id="dashboard"></div>
 <div class="CDB-Legends">
-    <h1 class='CDB-Legends-Title' style='text-align:center;margin-bottom:0px'>Market Potential</h1>
+    <h1 class='CDB-Legends-Title' style='text-align:center;margin-bottom:0px'>MARKET POTENTIAL</h1>
     <ul class="CDB-Legends-Info is-choropleth">
       <li class="CDB-Legends-InfoItem">
         <div class="CDB-Legends-Choropleth">
