--- a/index.html
+++ b/index.html
@@ -254,16 +254,16 @@ window.onload = function() {
 
           },
 
-          {
-             "type":"formula",
-             "layerIndex": 1,
-             "title":"Total Population Served by Towers",
-             "options":{
-               "column" : 'population_served',
-               "operation": "sum"
-             }
+          // {
+          //   "type":"formula",
+          //   "layerIndex": 1,
+          //   "title":"Total Population Served by Towers",
+          //   "options":{
+          //     "column" : 'population_served',
+          //     "operation": "sum"
+          //   }
 
-          },
+          // },
 
           {
              "type":"formula",
