--- a/index.html
+++ b/index.html
@@ -371,7 +371,8 @@ window.onload = function() {
 
       $.extend(vizJSON, diJSON);
       cartodb.deepInsights.createDashboard('#dashboard', vizJSON, {
-         no_cdn:false
+         no_cdn:false,
+         renderMenu:false
       });
    });
 }
